# rune-call

./: Cargo.toml  Rocket.toml  cert.pem  readme.md
src/: endpoints.rs  main.rs  password.rs  test.rs
src/controller/: cards.rs  games.rs  jwt.rs  login.rs  mod.rs  password.rs  players.rs  rooms.rs
src/endpoints/: games.rs  rooms.rs
src/model/: card.rs  game.rs  mod.rs  player.rs  player_token.rs  room.rs  round.rs  rune.rs
src/model/forms/: create_game_form.rs  create_room_form.rs  mod.rs
src/model/game/: card.rs  create_room_form.rs  game.rs  player.rs  room.rs  round.rs
src/model/login/: login_form.rs  login_token.rs  role.rs  user.rs
src/repository/: game_repository.rs  mod.rs  player_repository.rs  room_repository.rs  user_repository.rs
troefcall-backend/: Cargo.toml
troefcall-backend/src/: cors.rs  main.rs  test.rs
troefcall-backend/src/controller/: games.rs  jwt.rs  login.rs  password.rs  rooms.rs
troefcall-backend/src/model/: mod.rs
troefcall-backend/src/model/game/: card.rs  game.rs  player.rs  room.rs  round.rs
troefcall-backend/src/model/login/: user.rs
troefcall-backend/src/repository/: game_repository.rs  room_repository.rs  user_repository.rs
troefcall-vue/: .eslintrc.yml  index.html  package-lock.json  package.json  vite.config.js
troefcall-vue/certs/: key.pem
troefcall-vue/src/: constants.js  main.js  requests.js  utils.js
troefcall-vue/src/components/: constants.js
troefcall-vue/src/plugins/: vuetify.js
troefcall-vue/src/router/: index.js
troefcall-vue/src/store/: auth.js  preferences.js
(+28 files in other folders)
