[package]
name = "troefcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = {version = "8", default-features = false }
futures = "0.3"
bcrypt = "0.15.0"
rand = "0.8.5"

[dependencies.rocket]
version = "0.5.0-rc.1"
# features = ["json", "secrets", "tls"]
features = ["json", "secrets"]